Build/third-party-libraries/packages/nuget.org/system.xml.readerwriter/4.0.11/readme.md
System.Xml.ReaderWriter [4.0.11](https://www.nuget.org/packages/System.Xml.ReaderWriter/4.0.11)
--------------------

Used by: AspNetCoreNSwag

Target frameworks: net5.0, net6.0, net7.0, netcoreapp3.0

License: [ms-net-library](../../../../licenses/ms-net-library) 

- package license: [ms-net-library](http://go.microsoft.com/fwlink/?LinkId=329770) 
- project license: [Unknown](https://dot.net/) , License should be verified on https://dot.net/

Description
-----------
Provides provides a fast, non-cached, forward-only way to read and write Extensible Markup Language (XML) data.

Commonly Used Types:
System.Xml.XmlNodeType
System.Xml.XmlException
System.Xml.XmlReader
System.Xml.XmlWriter
System.Xml.IXmlLineInfo
System.Xml.XmlNameTable
System.Xml.IXmlNamespaceResolver
System.Xml.XmlNamespaceManager
System.Xml.XmlQualifiedName
 
When using NuGet 3.x this package requires at least version 3.4.

Remarks
-----------
no remarks


Dependencies 3
-----------

|Name|Version|
|----------|:----|
|[System.IO.FileSystem.Primitives](../../../../packages/nuget.org/system.io.filesystem.primitives/4.3.0)|4.3.0|
|[System.Text.RegularExpressions](../../../../packages/nuget.org/system.text.regularexpressions/4.1.0)|4.1.0|
|[System.Threading.Tasks.Extensions](../../../../packages/nuget.org/system.threading.tasks.extensions/4.0.0)|4.0.0|

*This page was generated by a tool.*